--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ p{
 .links span{
     margin: 0 10px;
     padding-bottom: 5px;
-    transition: 0.2s;
 }
 
 .links span:nth-child(1){
@@ -207,7 +206,6 @@ p{
     transition: 1s;
 }
 
-/* TODO - smother transform */
 .option:hover .icon_box{
     transform: rotate(45deg);
 }
@@ -228,62 +226,45 @@ p{
 	"slika5 slika6 slika7 slika7 slika4 slika4"
 }
 
-.slika1{
+.slika{
     position: relative;
-    background-image: url("img/videos_background_01.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
+}
+
+.slika1{
+    background-image: url("img/videos_background_01.webp");
     grid-area: slika1;
 }
 
 .slika2{
     background-image: url("img/videos_background_02.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika2;
 }
 
 .slika3{
     background-image: url("img/videos_background_03.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika3;
 }
 
 .slika4{
-    position: relative;
     background-image: url("img/videos_background_04.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika4;
 }
 
 .slika5{
     background-image: url("img/videos_background_05.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika5;
 }
 
 .slika6{
     background-image: url("img/videos_background_06.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika6;
 }
 
 .slika7{
-    position: relative;
     background-image: url("img/videos_background_07.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
     grid-area: slika7;
 }
 
@@ -309,27 +290,16 @@ p{
     font-size: 0;
 }
 
-.slika1:hover .hover_img{
+.slika1:hover .hover_img,
+.slika4:hover .hover_img,
+.slika7:hover .hover_img
+{
     height: 80px;
 }
 
-.slika1:hover .hover_img .text_hover{
+.slika1:hover .hover_img .text_hover,
+.slika4:hover .hover_img .text_hover,
+.slika7:hover .hover_img .text_hover
+{
     font-size: 15px;
 }
-
-.slika4:hover .hover_img{
-    height: 80px;
-}
-
-.slika4:hover .hover_img .text_hover{
-    font-size: 15px;
-}
-
-.slika7:hover .hover_img{
-    height: 80px;
-}
-
-.slika7:hover .hover_img .text_hover{
-    font-size: 15px;
-}
-
