--- a/style.css
+++ b/style.css
@@ -303,3 +303,164 @@ p{
 {
     font-size: 15px;
 }
+
+.uglovi{
+    width: 60%;
+    margin: 300px auto 200px auto;
+    display: flex;
+    justify-content: space-evenly;
+    height: 390px;
+}
+
+
+.uglovi_box{
+    background-color: #1a083d;
+    text-align: center;
+    height: 250px;
+    width: 250px;
+    transform: rotate(45deg);
+}
+
+.uglovi_dole{
+    margin-top: 90px;
+    align-self: flex-end;
+}
+
+.uglovi_cont{
+    transform: rotate(-45deg);
+    margin-top: 30px;
+}
+
+.uglovi_box h1 {
+    margin: 18px 0 6px;
+    font-size: 60px;
+}
+
+.uglovi_box i {
+    font-size: 50px;
+    color: #00bfe7;
+}
+
+.uglovi_box_01:before{
+    position: absolute;
+    left: -1px;
+    bottom: -2px;
+    height: 643px;
+    width: 636px;
+    border-left: 1px solid #333;
+    border-top: 1px solid #333;
+    content: "";
+    z-index: -1;
+}
+
+.uglovi_box_02:before{
+    position: absolute;
+    right: -47px;
+    bottom: -47px;
+    height: 643px;
+    width: 636px;
+    border-right: 1px solid #333;
+    border-bottom: 1px solid #333;
+    content: "";
+    z-index: -1;
+}
+
+.uglovi_box_03:before{
+    position: absolute;
+    right: -47px;
+    bottom: -47px;
+    left: -47px;
+    top: -47px;
+    bottom: -2px;
+    bottom: -2px;
+    height: 350px;
+    width: 350px;
+    border: 1px solid #333;
+    content: "";
+    z-index: -1;
+}
+
+.team{
+    height: 800px;
+    width: 100%;
+    background-image: url("img/team-bg.webp");
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.team_button{
+    position: absolute;
+    bottom: 90px;
+    right: 260px;
+}
+
+.team_text{
+    position: absolute;
+    top: 90px;
+}
+
+.team_text h3{
+    font-size: 16px;
+    letter-spacing: 2px;
+    margin: 0 0 6px;
+}
+
+.team_text h1{
+    margin-top: 0;
+    position: relative;
+    font-size: 36px;
+    letter-spacing: 2px;
+    padding: 0 0 25px;
+}
+
+.team_text h1:after{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 70px;
+    background: #00bfe7;
+    content: "";
+    z-index: 1;
+}
+
+.slike_cont{
+    display: flex;
+    position: absolute;
+    top: 180px;
+    position: relative;
+}
+
+.team_slika{
+    height: 400px;
+    width: 350px;
+    background-color: black;
+}
+
+.team_slika1{
+    margin-top: 100px;
+    background-image: url("img/team-1.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.team_slika2{
+    margin-top: 50px;
+    background-image: url("img/team-2.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.team_slika3{
+    background-image: url("img/team-3.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.team_slika4{
+    margin-top: -50px;
+    background-image: url("img/team-4.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
