--- a/style.css
+++ b/style.css
@@ -464,3 +464,112 @@ p{
     background-size: cover;
 }
 
+.blog_centar{
+    width: 20%;
+    margin: auto;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.blog_centar h3{
+    font-size: 18px;
+    margin: 0 0 6px;
+    letter-spacing: 3px;
+    font-weight: 400;
+}
+
+.blog_centar h1{
+    font-size: 36px;
+    margin: 0 0 6px;
+}
+
+.blog_linija{
+    width: 70px;
+    height: 5px;
+    background-color: #00bfe7;
+    border-radius: 5px;
+    margin: auto;
+}
+
+.blog_cont{
+    display: flex;
+    margin-top: 50px;
+}
+
+.blog_post{
+    box-sizing: border-box;
+    width: 400px;
+    height: 420px;
+    padding: 40px;
+    margin: 10px;
+    border: 1px solid #333;
+}
+
+.blog_post:hover{
+    opacity: 0.7;
+    border: 0px solid white;
+    background-image: url("img/blog_1.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.blog_post p {
+    line-height: 2;
+}
+
+.blog_post .date{
+    margin: 20px 0px;
+}
+
+.read_more a{
+    text-decoration: none;
+    color: white;
+}
+
+.blog_krugovi{
+    width: 6%;
+    margin: 50px auto 100px auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.krug{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+}
+
+.krug:nth-child(1){
+    background-color: #00bfe7;
+}
+
+.dron{
+    height: 470px;
+    margin-bottom: 200px;
+    background-image: url("img/dron_bg.webp");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.dron_cont{
+    width: 750px;
+    margin: auto auto auto 400px;
+    padding-top: 100px;
+}
+
+.dron_cont h1{
+    font-size: 42px;
+}
+
+.dron_cont p{
+    font-size: 18px;
+    margin: 0 0 55px;
+}
+
+.dron_button a{
+    text-decoration: none;
+    color: white;
+    padding: 15px 30px;
+    background-color: #00bfe7;
+}
